syntax = "proto3";
package lunaiz.am2mxm.api.v1;

import "google/protobuf/empty.proto";

// Service definition
service Search {
    rpc SearchMxMLink(SearchQuery) returns (SearchResult) {}
    rpc SearchAMSource(SearchQuery) returns (SearchResult) {}
}

service Byok {
    rpc getEncPublicKey(google.protobuf.Empty) returns (ByokEncResult) {}
    rpc checkMxMKeyValidity(ByokQuery) returns (ByokResult) {}
    rpc checkAMKeyValidity(ByokQuery) returns (ByokResult) {}
}

// Message types definition
message SearchQuery {
    string query   = 1; // Could be Apple Music Track ID, link, ISRC or Abstrack.
    ByokQuery byok = 2; // encrypted BYOK (Bring-Your-Own-Key) key. Could be null.
}

message SearchResult {
    repeated TrackInfo tracks = 1; // List of tracks
}

message ByokEncResult {
    string session_key    = 1; // Session key that 1:1 matches RSA Key pair.
    ByokEncJwk public_key = 2; // JWK-typed Public key for BYOK (Bring-Your-Own-Key) encryption.
}

message ByokQuery {
    string session_key   = 1; // Session key that 1:1 matches RSA Key pair.
    string mxm_key       = 2; // RSA Encrypted BYOK (Bring-Your-Own-Key) for MxM. Could be null.
    string am_teamid     = 3; // Apple API Team ID for Apple Music BYOK. Could be null.
    string am_keyid      = 4; // Apple API Key ID for Apple Music BYOK. Could be null.
    string am_secret_key = 5; // RSA Encrypted BYOK (Bring-Your-Own-Key) for Apple Music. Could be null.
}

message ByokResult {
    bool valid = 1; // BYOK key is valid or not.
}

message TrackInfo {
    string isrc          = 1; // Follow ISO 3901. CC-XXX-YY-NNNN format
    
    string title         = 2; // Track title. The title from Musixmatch should be used unless if it cannot be found in Musixmatch.
    string artist        = 3; // Artist name. The artist name from Musixmatch should be used unless if it cannot be found in Musixmatch.

    int32  mxm_abstrack  = 4; // Musixmatch's abstrack. Could be null, if Musixmatch doesn't have this track.
    string mxm_track_url = 5; // Musixmatch's track URL. Could be null, if Musixmatch doesn't have this track.

    string mxm_album     = 6; // Musixmatch's album name. Could be null, if Musixmatch doesn't have this track.
    string mxm_album_url = 7; // Musixmatch's album URL. Could be null, if Musixmatch doesn't have this track.

    string am_track_url  = 8; // Apple Music's track URL. Could be null, if Apple Music doesn't have this track.
    string am_album_url  = 9; // Apple Music's album URL. Could be null, if Apple Music doesn't have this track.
    string am_thumbnail  = 10; // Apple Music's thumbnail URL. Could be null, if Apple Music doesn't have this track.
}

message ByokEncJwk {
    string kty              = 1;
    string alg              = 2;
    string n                = 3;
    string e                = 4;
    bool ext                = 5;
    repeated string key_ops = 6;
}
